Fix overflow issue

--- a/css/index.css
+++ b/css/index.css
@@ -16,13 +16,12 @@ body {
 
 .container {
     width: 100%;
-    height: 100vh;
+    height: calc(100% - 20px);
     overflow: auto;
     display: flex;
     align-items: center;
     justify-content: center safe;
     flex-direction: column;
-    padding-top: 10px;
     padding-bottom: 20px;
     background-color: rgb(255, 255, 255, 0.95);
 }
@@ -31,6 +30,7 @@ body {
     border-radius: 50%;
     border: 3px dashed rgb(81, 81, 81);
     pointer-events: none;
+    margin-top: 20px;
 }
 
 .text-large {
